# smolurl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
migrations/: 20240112162519_create_users_table.sql  20240112163440_create_links_table.sql
src/: app.rs  args.rs  db.rs  lib.rs  service.rs  state.rs  utils.rs
src/middleware/: auth.rs
src/service/: link.rs  login.rs  ping.rs  redirect.rs  register.rs
src/state/: app.rs  jwt_claim.rs  link.rs  user.rs
tests/: link.rs  login.rs  ping.rs  redirect.rs  register.rs  setup.rs
