[package]
name = "smolurl"
version = "0.1.0"
edition = "2021"
authors = ["b3zrazli4n0"]
description = "SmolURL - allows you to create short URL's and track the dynamics of redirects(clicks)."
readme = "README.md"

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
base64 = "0.21.7"
clap = { version = "4.4.16", features = ["derive"] }
jwt-simple = "0.12.7"
serde = { version = "1.0.195", features = ["derive"] }
sha256 = "1.5.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
actix-http = "3.5.1"
